--- a/db-2-db-transfer/pom.xml
+++ b/db-2-db-transfer/pom.xml
@@ -34,7 +34,7 @@
 					<cloudHubDeployment>
 					      <uri>https://anypoint.mulesoft.com</uri>
 					      <muleVersion>${app.runtime}</muleVersion>
-					      <username>${username}</username>
+					      <username>rkandpal5</username>
 					      <password>${password}</password>
 					      <applicationName>${cloudhub.application.name}</applicationName>
 					      <environment>${environment}</environment>
